css/main.css
/* ... */
.pages {
    position: fixed;
    bottom: 3px;
    left: 50%;
  
    color: sandybrown;
    font-family: "Oswald";
    font-size: 18px;
}

@media (min-width: 640px) {
  .choices__list--dropdown .choices__item--selectable {
    padding-right: 100px;
  }

  .choices__list--dropdown .choices__item--selectable:after {
    content: attr(data-select-text);
    font-size: 12px;
    opacity: 0;
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
  }

  [dir="rtl"] .choices__list--dropdown .choices__item--selectable {
    text-align: right;
    padding-left: 100px;
    padding-right: 10px;
  }

  [dir="rtl"] .choices__list--dropdown .choices__item--selectable:after {
    right: auto;
    left: 10px;
  }

  .pages {
    position: fixed;
    bottom: 3px;
    left:50%;
}
}

.choices__list--dropdown .choices__item--selectable.is-highlighted {
  background-color: #f2f2f2;
}

.choices__list--dropdown .choices__item--selectable.is-highlighted:after {
  opacity: 0.5;
}

.choices__item {
  cursor: default;
}

.choices__item--selectable {
  cursor: pointer;
}

.choices__item--disabled {
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
}

.choices__heading {
  font-weight: 600;
  font-size: 12px;
  padding: 10px;
  border-bottom: 1px solid #f7f7f7;
  color: gray;
}

.choices__button {
  text-indent: -9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  background-color: transparent;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
}

.choices__button:focus {
  outline: none;
}

.choices__input {
  display: inline-block;
  vertical-align: baseline;
  background-color: #f9f9f9;
  font-size: 14px;
  margin-bottom: 5px;
  border: 0;
  border-radius: 0;
  max-width: 100%;
  padding: 4px 0 4px 2px;
}

.choices__input:focus {
  outline: 0;
}

[dir="rtl"] .choices__input {
  padding-right: 2px;
  padding-left: 0;
}

.choices__placeholder {
  opacity: 0.5;
}

* {
  box-sizing: border-box;
}

.s129 {
  min-height: 100vh;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: center;
  justify-content: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Oswald, sans-serif;
  background: url(../images/search-bg.jpg);
  background-size: cover;
  background-position: center center;
  padding: 15px;
}

.s129 form {
  width: 100%;
  max-width: 390px;
}

.s129 form .inner-form {
  width: 100%;
}

.s129 form .inner-form .input-field {
  height: 80px;
  width: 100%;
  position: relative;
}

.s129 form .inner-form .input-field input {
  height: 100%;
  width: 100%;
  background: 0 0;
  border: 0;
  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
  display: block;
  width: 100%;
  padding: 10px 32px 10px 70px;
  font-size: 18px;
  color: #fff;
  transition: all 0.2s ease-out, color 0.2s ease-out;
}

.s129 form .inner-form .input-field input.placeholder {
  color: #fff;
  font-size: 18px;
}

.s129 form .inner-form .input-field input:-moz-placeholder {
  color: #fff;
  font-size: 18px;
}

.s129 form .inner-form .input-field input::-webkit-input-placeholder {
  color: #fff;
  font-size: 18px;
}

.s129 form .inner-form .input-field input:hover,
.s129 form .inner-form .input-field input:focus {
  box-shadow: none;
  outline: 0;
  border-bottom-color: #fff;
}

.s129 form .inner-form .input-field .btn-search {
  width: 70px;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  left: 0;
  height: 100%;
  background: 0 0;
  border: 0;
  padding: 0;
  cursor: pointer;
}

.s129 form .inner-form .input-field .btn-search svg {
  fill: #fff;
  width: 50px;
  height: 50px;
}

.s129 form .inner-form .input-field .btn-search:hover,
.s129 form .inner-form .input-field .btn-search:focus {
  outline: 0;
  box-shadow: none;
}

@media screen and (max-width: 855px) {
  .promo {
    display: none;
  }
  .s129 form .inner-form .input-field {
    margin-bottom: 20px;
    height: 50px;
  }

  .s129 form .inner-form .input-field input {
    padding-left: 35px;
    font-size: 16px;
    margin-top: 55px;
  }
 
  .results {
    position: relative;
    display: block;
    margin-left: 0em;
    padding-left: 0.5em;
  }
  .pages {
    position: fixed;
    display:block;
    bottom: 10px;
    font-size: 1em;
    left:65%;
  }

  .s129 form .inner-form .input-field .btn-search svg {
    width: 36px;
    height: 36px;
  }
}
.upsearch {
  min-height: 0px;
  background: none;
}

.body_bck {
  background-color: #533323;
}

p {
  border-bottom: 1px solid aqua;
}

.highlighted {
  font-size: 1.4em;
  color: aquamarine;
}

